--- a/packages/convenient_test_common/pubspec.yaml
+++ b/packages/convenient_test_common/pubspec.yaml
@@ -20,7 +20,8 @@ dev_dependencies:
   dart_code_metrics: ^4.15.0
   flutter_test:
     sdk: flutter
-  lint: ^1.8.2
-# dependency_overrides:
-#   convenient_test_common_dart:
-#     path: ../convenient_test_common_dart
+  lint: ^1.8.0 #TODO: added .0 just to stop android studio complaining
+
+dependency_overrides:
+   convenient_test_common_dart:
+     path: ../convenient_test_common_dart
